@@ -6,12 +6,13 @@ import cn.lary.rpc.protocol.RpcProtocol;
 
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 public class LFULoadBalance extends RpcLoadBalance {
     private final ConcurrentHashMap<String, HashMap<RpcProtocol,Integer>> LFUMap = new ConcurrentHashMap<>();
     private long cache_time = 0;
     @Override
-    public RpcProtocol route(String serviceKey, Map<RpcProtocol, RpcClientHandler> serverNodes) throws Exception {
+    public RpcProtocol route(String serviceKey, Map<String, RpcClientHandler> serverNodes) throws Exception {
         List<RpcProtocol> rpcProtocols = getRpcProtocols(serviceKey, serverNodes);
         // clear cache
         if(System.currentTimeMillis() > cache_time){
@@ -38,7 +39,7 @@ public class LFULoadBalance extends RpcLoadBalance {
         if(delKeys.size() > 0){
             delKeys.forEach(map::remove);
         }
-        List<Map.Entry<RpcProtocol, Integer>> list = map.entrySet().stream().toList();
+        List<Map.Entry<RpcProtocol, Integer>> list = map.entrySet().stream().collect(Collectors.toList());
         Collections.sort(list, new Comparator<Map.Entry<RpcProtocol, Integer>>() {
             @Override
             public int compare(Map.Entry<RpcProtocol, Integer> o1, Map.Entry<RpcProtocol, Integer> o2) {
